--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.28",
-    "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "bootstrap": "^5.1.2",
     "font-awesome": "^4.7.0",
@@ -44,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.175"
+    "@types/lodash": "^4.14.175",
+    "@types/react": "^17.0.27"
   }
 }
